--- a/service-interview/package.json
+++ b/service-interview/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "aws-sdk": "^2.32.0",
     "dotenv": "^4.0.0",
+    "entities": "^1.1.1",
     "node-record-lpcm16": "^0.2.0",
     "snowboy": "^1.1.0",
     "speaker": "^0.3.0",
