--- a/service-interview/package.json
+++ b/service-interview/package.json
@@ -11,12 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "aws-sdk": "^2.110.0",
     "dotenv": "^4.0.0",
     "entities": "^1.1.1",
     "node-record-lpcm16": "^0.3.0",
     "snowboy": "^1.1.0",
     "speaker": "^0.4.0",
+    "tts-polly": "github:voiceco/tts-polly",
     "watson-developer-cloud": "^2.39.0"
   }
 }
