--- a/service-bluetooth/peripheral/package.json
+++ b/service-bluetooth/peripheral/package.json
@@ -11,8 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bleno": "^0.4.2",
+    "bleno": "^0.5.0",
     "delay": "^2.0.0",
+    "dotenv": "^5.0.1",
     "ev-pubsub": "^2.2.0",
     "iwlist": "0.0.5"
   }
